--- a/index.html
+++ b/index.html
@@ -10,8 +10,27 @@
     <link href="./assets/css/style.css" rel="stylesheet">
     <link  href="./assets/css/destaques.css" rel="stylesheet">
     <link href="./assets/css/populares.css" rel="stylesheet">
+    <link href="./assets/css/menu.css" rel="stylesheet">
 </head>
+<main>
 <body class="app">
+    <nav class="menu">
+        <ul class="menu__lista">
+            <li class="menu__item">
+                <a class="menu__link ativo" href="#">
+                    <i class="fas fa-home"></i>
+                    Início
+                </a>
+                <a class="menu__link" href="#">
+                    <i class="fas fa-mobile-alt"></i>
+                    Aplicativos</a>
+                <a class="menu__link" href="#">
+                    <i class="fas fa-gamepad"></i>
+                    Jogos
+                </a>
+            </li>
+        </ul>
+    </nav>
     <section class="destaques">
         <div class="destaques__principal caixa">
             <h3 class="destaques__titulo">Fornite</h3>
@@ -363,6 +382,8 @@
             </div>
         </div>
     </section>
+</main>
+<footer class="rodape">Todos os direitos reservados &copy;</footer>
     <script src="./assets/js/fontawesome.all.min.js"></script>
 </body>
 </html>
